--- a/mentions.html
+++ b/mentions.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Service - La Grâce Parle-Fondation</title>
+    <title>ChariTeam - Free Nonprofit Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/logo.jfif" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,9 +71,9 @@
                     <a href="about.html" class="nav-item nav-link">À propos</a>
                     <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Soutien et Engagements</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Soutien et Engagements</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item active">Nos Services</a>
+                            <a href="service.html" class="dropdown-item">Nos Services</a>
                             <a href="donate.html" class="dropdown-item">Faire un don</a>
                             <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                             <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
@@ -105,120 +105,75 @@
     <!-- Navbar End -->
 
 
-
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-service mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-faq mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">Service</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Mentions légales </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Accueil</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="">Soutien et Engagement</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Nos Services</li>
+                    <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
+                    <!-- <li class="breadcrumb-item text-primary " aria-current="page">Contactez-nous</li> -->
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Ce que nous faisons</div>
-                <h1 class="display-6 mb-5">Apprenez-en plus sur ce que nous faisons et impliquez-vous</h1>
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/church.png" alt="">
-                        <h4 class="mb-3">Transformation des Vies par l'évangile de Christ </h4>
-                        <p class="mb-4">Nous changeons les Vies grâce à l'évangile transformateur de Jésus-Christ.</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/medical.png" alt="">
-                        <h4 class="mb-3">Traitement médical</h4>
-                        <p class="mb-4">Nous offrons des soins essentiels pour préserver votre santé</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-                
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/community.png" alt="">
-                        <h4 class="mb-3">Développement communautaire </h4>
-                        <p class="mb-4">Progression et lien au sein de la communauté</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-3.png" alt="">
-                        <h4 class="mb-3">Eau potable pure</h4>
-                        <p class="mb-4">L'accès à l'eau potable pure est fondamental pour la santé globale.</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-              
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">
-                        <h4 class="mb-3">Éducation </h4>
-                        <p class="mb-4">Acquisition de connaissances et compétences pour le développement personnel.</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/programm.png" alt="">
-                        <h4 class="mb-3">Programmes d'autonomisation économique</h4>
-                        <p class="mb-4">Initiatives pour renforcer l'indépendance financière et le développement personnel.</p>
-                        <!-- <a class="btn btn-outline-primary px-3" href="">
-                           Lire la suite
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service End -->
+    <h2 style="text-align: center;color: burlywood;">1. La protection des données en un coup d'œil</h2>
+    <h3>Informations générales</h3>
+    <p style="text-align: justify;padding: 20px;">Les notes suivantes donnent un simple aperçu de ce qu'il advient de vos données personnelles lorsque vous visitez notre site Web. Les données personnelles sont toutes les données avec lesquelles vous pouvez être identifié personnellement. Vous trouverez des informations détaillées sur le sujet de la protection des données dans notre déclaration de protection des données énumérées sous ce texte.</p>
+    <h3>Collecte de données sur notre site Web</h3>
+<p>Qui est responsable de la collecte des données sur ce site Web ?</p>
+<p>Le traitement des données sur ce site Web est effectué par l'exploitant du site Web. Vous trouverez ses coordonnées dans les mentions légales de ce site.</p>
+    <h3>Comment recueillons-nous vos informations ?</h3>
+    <p>D'une part, vos données sont collectées lorsque vous nous les communiquez. Il peut s'agir de données que vous saisissez dans un formulaire de contact, par exemple.
 
+    </p>
+    <p>D'autres données sont automatiquement collectées par nos systèmes informatiques lorsque vous visitez notre site Web. Il s'agit principalement de données techniques (p. ex. navigateur Internet, système d'exploitation ou temps de consultation des pages). Ces données sont collectées automatiquement dès que vous entrez sur notre site Web.</p>
 
-       <!-- Footer Start -->
-       <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+<h3>A quoi servent vos données ?</h3>
+<p>Une partie des données est collectée afin d'assurer une mise à disposition sans erreur du site web. D'autres données peuvent être utilisées pour analyser votre comportement d'utilisateur.</p>
+<h3>Quels sont vos droits concernant vos données ?</h3>
+<p>Vous avez le droit de recevoir à tout moment et gratuitement des informations sur l'origine, le destinataire et la finalité de vos données personnelles stockées. Vous avez également le droit de demander la correction, le blocage ou la suppression de ces données. Si vous avez d'autres questions sur la protection des données, vous pouvez nous contacter à tout moment à l'adresse indiquée dans les mentions légales. Vous avez également le droit de faire appel auprès de l'autorité de surveillance compétente.</p>
+<h3>Analyse et outils de tierce partie</h3>
+<p>Lorsque vous visitez notre site Web, votre comportement de navigation peut être évalué statistiquement. Cela se fait principalement à l'aide de cookies et de programmes d'analyse. L'analyse de votre comportement de navigation est généralement anonyme ; le comportement de navigation ne peut pas être retracé jusqu'à vous. Vous pouvez vous opposer à cette analyse ou l'empêcher en n'utilisant pas certains outils. Vous trouverez des informations détaillées à ce sujet dans la déclaration de protection des données suivante.</p>
+<p>Vous pouvez vous opposer à cette analyse. Nous vous informerons des possibilités d'opposition dans cette déclaration de protection des données.</p>
+<h2 style="text-align: center;color: burlywood;">2. Informations générales et informations obligatoires</h2>
+<h3>Confidentialité des données</h3>
+<p>Les opérateurs de ces pages prennent très au sérieux la protection de vos données personnelles. Nous traitons vos données personnelles de manière confidentielle et conformément aux dispositions légales en matière de protection des données et à la présente déclaration de protection des données.</p>
+<p>Lorsque vous utilisez ce site Web, diverses données personnelles sont collectées. Les données personnelles sont des données permettant de vous identifier personnellement. Cette déclaration de protection des données explique quelles données nous collectons et pour quoi nous les utilisons. Il explique également comment et dans quel but.</p>
+<p>Nous attirons votre attention sur le fait que la transmission de données sur Internet (par ex. la communication par e-mail) peut présenter des failles de sécurité. Une protection complète des données contre l'accès par des tiers n'est pas possible.</p>
+<h3>Note sur l'organisme responsable</h3>
+<p>Le responsable du traitement des données sur ce site Web est :</p>
+<ul>
+    <li>Téléphone : +49 (0)40 / 88 88 88 4 4 11-11
+     </li>
+    <li>   Fax : +49 (0)40 / 88 88 88 4 4 11-12
+       </li>
+    <li> Courriel : kontakt@joyce-meyer.d</li>
+    <li>Téléphone : 49 (0)40 / 88 88 88 4 4 11 11 11 11
+</li>
+  
+</ul>
+<p>L'organisme responsable est la personne physique ou morale qui, seule ou avec d'autres, décide des finalités et des moyens de traitement des données à caractère personnel (par exemple, noms, adresses électroniques, etc.).</p>
+<h3>Révocation de votre consentement au traitement des données</h3>
+<p>De nombreux traitements de données ne sont possibles qu'avec votre consentement exprès. Vous pouvez révoquer votre consentement à tout moment. Tout ce que vous avez à faire est de nous envoyer un e-mail informel. La légalité du traitement des données jusqu'à la révocation n'est pas affectée par la révocation.</p>
+<h3>Droit de recours auprès de l'autorité de surveillance compétente</h3>
+<p>En cas de violation de la loi sur la protection des données, la personne concernée dispose d'un droit de recours auprès de l'autorité de contrôle compétente. L'autorité de contrôle compétente en matière de protection des données est le délégué à la protection des données de l'État fédéral dans lequel notre entreprise a son siège. Une liste des délégués à la protection des données et leurs coordonnées se trouve à l'adresse suivante : https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html.</p>
+<h3>Droit à la transférabilité des données
+   </h3>
+   <p>Vous avez le droit d'accéder aux données que nous recueillons sur la base de votre consentement ou dans les cas suivants</p>
+   <h2 style="text-align: center;color: burlywood;">3. Conditions d’utilisation</h2>
+   <p>Le site est accessible par les url suivants : lagraceparle.org est exploité dans le respect de la législation allemande. L’utilisation de ce site est régie par les présentes conditions générales. En utilisant le site, vous reconnaissez avoir pris connaissance de ces conditions et les avoir acceptées. Celles-ci pourront êtres modifiées à tout moment et sans préavis par La Grâce Parle Fondation.</p>
+   <p>La Grâce Parle Fondation ne saurait être tenue pour responsable en aucune manière d’une mauvaise utilisation du service.</p>
+   <h2 style="text-align: center;color: burlywood;">4. Limitation de responsabilité</h2>
+   <p>Les informations contenues sur ce site sont aussi précises que possibles et le site est périodiquement remis à jour, mais peut toutefois contenir des inexactitudes, des omissions ou des lacunes. Si vous constatez une lacune, erreur ou ce qui paraît être un dysfonctionnement, merci de bien vouloir le signaler par email en décrivant le problème de la manière la plus précise possible (page posant problème, action déclenchante, type d’ordinateur et de navigateur utilisé, …).</p>
+   <p>Tout contenu téléchargé se fait aux risques et périls de l’utilisateur et sous sa seule responsabilité. En conséquence, La Grâce Parle Fondation ne saurait être tenue responsable d’un quelconque dommage subi par l’ordinateur de l’utilisateur ou d’une quelconque perte de données consécutives au téléchargement.
+    Les photos sont non contractuelles.</p>
+    <p>Les liens hypertextes mis en places dans le cadre du présent site internet en direction d’autres ressources présentes sur le réseau Internet ne sauraient engager la responsabilité de La Grâce Parle Fondation.</p>
+      <!-- Footer Start -->
+      <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
