--- a/donate.html
+++ b/donate.html
@@ -148,13 +148,13 @@
                                 <div class="col-12">
                                     <div class="btn-group d-flex justify-content-around">
                                         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-                                        <label class="btn btn-light py-3" for="btnradio1">$10</label>
+                                        <label class="btn btn-light py-3" for="btnradio1">$100</label>
 
                                         <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
-                                        <label class="btn btn-light py-3" for="btnradio2">$20</label>
+                                        <label class="btn btn-light py-3" for="btnradio2">$300</label>
 
                                         <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
-                                        <label class="btn btn-light py-3" for="btnradio3">$30</label>
+                                        <label class="btn btn-light py-3" for="btnradio3">Montant Libre</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
