--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                 <input
                   class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                   type="email"
-                  id="email"
+                  id="emails"
                   name="email"
                   required
                   placeholder="Votre email"
