--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
             <div>
               <h5 class="text-light mb-4">Newsletter</h5>
               <p>Recevoir une méditation tous les jours</p>
-              <div class="position-relative mx-auto" style="max-width: 400px">
+              <div class="position-relative mx-auto" style="max-width: 800px">
                 <input
                   class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                   type="email"
@@ -820,10 +820,11 @@
                 <button
                   id="openModalButton"
                   type="submit"
-                  class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                  class="btn btn-primary py-2 position-absolute top-20 end-0 mt-2 me-2"
                 >
                   Je m'abonne
                 </button>
+                <p id="messageParagraph"></p>
               </div>
             </div>
           </form>
