--- a/humanitaire.html
+++ b/humanitaire.html
@@ -38,7 +38,20 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-FSM4EQJ2E1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
+    gtag("config", "G-FSM4EQJ2E1");
+  </script>
   <body>
     <!-- Spinner Start -->
     <div
