--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
     <link href="css/style.css" rel="stylesheet" />
     <script src="https://cdn.fedapay.com/checkout.js?v=1.1.7"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-FSM4EQJ2E1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
+    gtag("config", "G-FSM4EQJ2E1");
+  </script>
   <body>
     <!-- Spinner Start -->
     <div
