--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <div class="carousel-item">
             <img
               class="w-100"
-              src="img/all7.jpg"
+              src="img/all7.jfif"
               alt=" Philharmonie La Grâce Parle"
             />
             <div class="carousel-caption">
@@ -476,13 +476,13 @@
             >
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/all7.jpg"
+                src="img/all7.jfif"
                 alt="  Philharmonie La Grâce Parle-1"
                 style="object-fit: cover"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
-                src="img/about-6.jpg"
+                src="img/about-6.jfif"
                 alt="  Philharmonie La Grâce Parle-2"
                 style="width: 200px; height: 200px"
               />
