--- a/index.html
+++ b/index.html
@@ -863,14 +863,12 @@ BOUTIQUE
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
-            <h1 class="fw-bold text-primary m-0">
-              <img
-                src="./img/logo.jfif"
-                width="45"
-                style="border-radius: 100%"
-              />
-              La Grâce<span class="text-white"> Parle</span>
-            </h1>
+      <p>  <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
+        <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
+          <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+          La Grâce<span class="text-white"> Parle</span>
+        </h6>
+      </a></p>
             <p>
               L'emplacement du centre se trouve en face de Santé pour tous à
               Jéricho
@@ -963,6 +961,9 @@ BOUTIQUE
           </div>
         </div>
       </div>
+      <a href="https://api.whatsapp.com/send?phone=NUMÉRODEVOTREWHATSAPP" target="_blank">
+        <img src="./img/whatsapp-icon.png" style="z-index: 10000; box-shadow: 1px 2px 3px gray;" alt="WhatsApp" width="50" height="50">
+    </a>
     </div>
     <!-- Footer End -->
 
